--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-session": "^1.15.6",
     "massive": "^4.6.5",
     "passport": "^0.4.0",
-    "passport-auth0": "^0.6.1"
+    "passport-auth0": "^0.6.1",
+    "path": "^0.12.7",
+    "request": "^2.83.0"
   }
 }
